--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,4 +1,9 @@
-
+.product-wrapper{
+  border-style: ridge;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px;
+}
 
 /*
 Copyright Google LLC. All Rights Reserved.
