--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -15,7 +15,7 @@
   [product]="product" 
   (notify)="onNotify()">
 </app-product-alerts>
-<img src="img_chania.jpg" width="460" height="345">
+<img class="prodcut-main-image" [alt]="product.name" [src]="product.image" width="460" height="345">
 </div>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
