--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <h2>Products</h2>
-<div class="product-wrapper" *ngFor="let product of products">
+<div class="product-wrapper" *ngFor="let product of products; index as productId">
   <h3>
     <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
       {{ product.name }}
