--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -4,4 +4,13 @@
   margin: 10px;
   border-radius: 10px;
 }
-
+.product-main-image {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  padding-top: 10px;
+}
+.btn{
+  position: relative;
+  display: block;
+}
