--- a/src/app/product-buy/product-buy.component.html
+++ b/src/app/product-buy/product-buy.component.html
@@ -4,13 +4,10 @@
   <h3>{{ product.name }}</h3>
   <h4>Price {{ product.price | currency }}</h4>
   <h4>IVA {{ product.iva | currency }}</h4>
-  <h4>Total  {{ product.iva +product.price| currency }}</h4>
+  <h4>Total {{ product.iva +product.price| currency }}</h4>
   <p>{{ product.description }}</p>
   <img class="prodcut-main-image" [alt]="product.name" [src]="product.image" width="460" height="345">
-  <button>
+  <button (click)="addToCart(product)">
     Buy
-  </button>
-  <button>
-    add to car
   </button>
 </div>
