3 files modified, 2 added

--- a/src/app/product-buy/product-buy.component.html
+++ b/src/app/product-buy/product-buy.component.html
@@ -8,6 +8,6 @@
   <p>{{ product.description }}</p>
   <img class="prodcut-main-image" [alt]="product.name" [src]="product.image" width="460" height="345">
   <button (click)="addToCart(product)">
-    Buy
+    Add to car
   </button>
 </div>
