--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,7 @@
 <h3>Cart</h3>
 
-<div class="cart-item" *ngFor="let item of items">
+<div class="cart-item" *ngFor="let item of items; index as productId">
   <span>{{ item.name }}</span>
   <span>{{ item.price | currency }}</span>
+  <span>{{ lots(productId)}}</span>
 </div>
