--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,11 +1,12 @@
 <h2>Product Details</h2>
-
 <div class="product-wrapper" *ngIf="product">
   <h3>{{ product.name }}</h3>
-  <h4>{{ product.price | currency }}</h4>
+  <h4>Price {{ product.price | currency }}</h4>
+  <h4>IVA {{ product.iva | currency }}</h4>
+  <h4>Total {{ product.iva +product.price| currency }}</h4>
   <p>{{ product.description }}</p>
-  <img class="product-main-image" [alt]="product.name" [src]="product.image" width="460" height="345">
-  <button class="btn" [routerLink]="['/products-buy', productId]">
-    Buy
+  <img class="prodcut-main-image" [alt]="product.name" [src]="product.image" width="460" height="345">
+  <button (click)="addToCart(product)">
+    Add to car
   </button>
 </div>
