--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,7 +1,13 @@
 <h3>Cart</h3>
-
+<div class="cart-item">
+<span>Phone</span>
+<span>individual price</span>
+<span>Quantity</span>
+<span>Total</span>
+</div>
 <div class="cart-item" *ngFor="let item of items; index as productId">
   <span>{{ item.name }}</span>
   <span>{{ item.price | currency }}</span>
   <span>{{ lots[productId]}}</span>
+   <span>{{ lots[productId]*item.price | currency}}</span>
 </div>
