--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -11,3 +11,4 @@
   <span>{{ lots[productId]}}</span>
    <span>{{ lots[productId]*item.price | currency}}</span>
 </div>
+<h3>Total to pay : {{total}}</h3>
