--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
   <h1 id="home">My Store</h1>
 </a>
 <a routerLink="/cart" class="button fancy-button">
-  <i class="material-icons">shopping_cart</i>Checkout
+  <i id="checkout" class="material-icons">shopping_cart</i>Checkout
 </a>
 
 <!-- 
