--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,6 +1,6 @@
 <h2>Product Details</h2>
 <div class="product-wrapper" *ngIf="product">
-  <h3 id="prodcut-name" >{{ product.name }}</h3>
+  <h3 id="product-name" >{{ product.name }}</h3>
   <h4 id="price">Price {{ product.price | currency }}</h4>
   <h4>IVA {{ product.iva | currency }}</h4>
   <h4 id="total">Total {{ product.iva +product.price| currency }}</h4>
