--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/']">
-  <h1 id="home">My Store</h1>
+  <h1 id="home">Phones Stores</h1>
 </a>
 <a routerLink="/cart" class="button fancy-button">
   <i id="checkout" class="material-icons">shopping_cart</i>Checkout
