--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,11 +1,11 @@
 <h2>Product Details</h2>
 <div class="product-wrapper" *ngIf="product">
-  <h3 id="product-name" >{{ product.name }}</h3>
-  <h4 id="price">Price {{ product.price | currency }}</h4>
-  <h4>IVA {{ product.iva | currency }}</h4>
-  <h4 id="total">Total {{ product.iva +product.price| currency }}</h4>
-  <p>{{ product.description }}</p>
-  <img class="prodcut-main-image" [alt]="product.name" [src]="product.image" width="460" height="345">
+  <h3 name="product-name" >{{ product.name }}</h3>
+  <h4 name="price">Price {{ product.price | currency }}</h4>
+  <h4 name="iva">IVA {{ product.iva | currency }}</h4>
+  <h4 name="total">Total {{ product.iva +product.price| currency }}</h4>
+  <p name="">{{ product.description }}</p>
+  <img class="product-main-image" [alt]="product.name" [src]="product.image" width="460" height="345">
   <button id="add-car" (click)="addToCart(product)">
     Add to car
   </button>
