--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -13,7 +13,7 @@
   </button>
 <app-product-alerts
   [product]="product" 
-  [message]="More"
+  [message]="more"
   (notify)="onNotify()">
 </app-product-alerts>
 <img class="prodcut-main-image" [alt]="product.name" [src]="product.image" width="460" height="345">
