--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,5 @@
 <h3>Cart</h3>
+
 <div class="cart-item">
 <span>Phone</span>
 <span>individual price</span>
@@ -12,3 +13,6 @@
    <span>{{ lots[productId]*item.price | currency}}</span>
 </div>
 <h3>Total to pay : {{total}}</h3>
+ <p>
+  <a routerLink="/shipping">Shipping Prices</a>
+</p>
