--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -13,6 +13,25 @@
    <span>{{ lots[productId]*item.price | currency}}</span>
 </div>
 <h3>Total to pay : {{total}}</h3>
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+
+  <div>
+    <label for="name">
+      Name
+    </label>
+    <input id="name" type="text" formControlName="name">
+  </div>
+
+  <div>
+    <label for="address">
+      Address
+    </label>
+    <input id="address" type="text" formControlName="address">
+  </div>
+
+  <button class="button" type="submit">Purchase</button>
+
+</form>
  <p>
   <a routerLink="/shipping">Shipping Prices</a>
 </p>
