--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -12,7 +12,7 @@
   <span>{{ lots[productId]}}</span>
    <span>{{ lots[productId]*item.price | currency}}</span>
 </div>
-<h3>Total to pay : {{total}}</h3>
+<h3>Total to pay : {{total | currency}}</h3>
 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
 
   <div>
