--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -8,7 +8,7 @@
   <p *ngIf="product.description">
     Description: {{ product.description }}
   </p>
-  <button (click)="share()">
+  <button class="btn-share" (click)="share()">
     Share
   </button>
 <app-product-alerts
