--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,6 +5,7 @@
       {{ product.name }}
     </a>
   </h3>
+  <h5>{{providers}}</h5>
   <p *ngIf="product.description">
     Description: {{ product.description }}
   </p>
