--- a/src/styles.css
+++ b/src/styles.css
@@ -58,7 +58,7 @@ input {
   border-radius: 2px;
   padding: 8px;
   margin-bottom: 16px;
-  border: 1px solid #BDBDBD;
+  border: 1px solid lightcyan;
 }
 
 label {
