--- a/src/app/html-practice/html-practice.component.html
+++ b/src/app/html-practice/html-practice.component.html
@@ -5,7 +5,7 @@
 <!-- Este es un ejemplo de un archivo HTML que analizaremos! -->
 
 <!doctype html>
-    <html>
+    <html lang="es">
         <head>
             <title>Mi Sitio</title>
         </head>
