--- a/src/app/html-practice/html-practice.component.html
+++ b/src/app/html-practice/html-practice.component.html
@@ -8,6 +8,7 @@
     <html lang="es">
         <head>
             <title>Mi Sitio</title>
+            <meta name="Descripcion de mi sitio" />
         </head>
         <body>
             <h1>Hola, Mundo!</h1>
